add image to show how it is used

--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -1,5 +1,5 @@
 <div class="jumbotron centered">
-  <h1>German words demo!</h1>
+  <h1><img src="/img/german-flag.jpg" /> German words demo!</h1>
   <p>Click the button below to get a random German word with its translation:</p>
   <p><a class="btn btn-primary" role="button" ng-click="home.getRandomWord()">Give me a word!</a></p>
   <div ng-if="home.word">
